# CrossCache

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/cache/: cache.h
include/config/: conf.h
include/inner_h/: device.h  inner.h  protocol.h
python/: adaptor.py  crosscache_connector.py  fake_client.py  ipckey_utils.cpp  setup.py
python/utils/: futures.py  mq.py  protocol.py
src/: CMakeLists.txt  main.c
src/cache/: CMakeLists.txt  cache.c
src/config/: CMakeLists.txt  config.cpp
src/device/: adaptor.h  device.cpp
src/device/mem/: mem.cpp
src/device/npu/: npu.cpp  npu.h
src/device/npu/kernels/: ascendc_with_def.cmake  multi_layer_memcpy_kernel.cpp
src/device/npu_sdk/: npu_sdk.cpp
tests/: build.sh  test_copy.cpp
