#***********************************************************
#***********************************************************

include_directories(${JSONCPP_DIR}/include)

#***********************************************************
#***********************************************************

set(CONFIG_SRC config.cpp)

#***********************************************************
#***********************************************************

add_library(config ${CONFIG_SRC})
target_link_libraries(config infra
							jsoncpp)
